test/elaboration/good/coreml_int.mle
let (main : int) = 42