test/elaboration/bad/coreml_char.mle
let (c : char) = ('a' : int)